# ezone-auth-sdk

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  release.yml
bindings/browser/: package.json  tsconfig.json
bindings/browser/src/: device.ts  index.ts  secure-device.ts  utils.ts  webauthn.ts
bindings/dart/: pubspec.yaml
bindings/dart/lib/: ezone_sdk.dart
bindings/dart/lib/src/: client.dart  device_key.dart
bindings/dotnet/Ezone.SDK/: Ezone.SDK.csproj  EzoneClient.cs
bindings/go/: client.go  client_test.go  go.mod  types.go
bindings/java/: pom.xml
bindings/java/src/main/java/io/ezone/: EzoneClient.java  EzoneException.java
bindings/nodejs/: package.json  tsconfig.json
bindings/nodejs/src/: client.ts  index.ts  types.ts
bindings/php/: composer.json
bindings/php/src/: EzoneClient.php  EzoneException.php
bindings/python/: pyproject.toml
bindings/python/ezone/: __init__.py  client.py  types.py
bindings/ruby/: ezone-sdk.gemspec
bindings/ruby/lib/: ezone.rb
bindings/ruby/lib/ezone/: client.rb
bindings/rust/: Cargo.toml
bindings/rust/src/: lib.rs
bindings/swift/: Package.swift
bindings/swift/Sources/EzoneSDK/: EzoneClient.swift
docs/: docusaurus.config.ts  package.json  sidebars.ts
docs/docs/: api-reference.md  getting-started.md  intro.md
docs/docs/concepts/: architecture.md  cryptography.md  device-keys.md  stateless-auth.md
docs/docs/sdks/: browser.md  dart.md  dotnet.md  go.md  index.md  java.md  nodejs.md  php.md  python.md  react-native.md  ruby.md  rust.md  swift.md
docs/docs/security/: fips.md  overview.md  threat-model.md
docs/docs/self-hosting/: configuration.md  server.md  tls.md
docs/src/css/: custom.css
docs/src/pages/: index.tsx
examples/web/: README.md
examples/web/client/: index.html  package.json  tsconfig.json
examples/web/client/src/: App.tsx  Dashboard.tsx  Login.tsx  Register.tsx  auth.ts  ui.tsx
examples/web/server/: index.js  package.json
include/ezone/: auth.h  crypto_engine.h  email_provider.h  ezone_c.h  postgres_adapter.h  resend_provider.h  storage_adapter.h  types.h
rest/: CMakeLists.txt  main.cpp  server.cpp  server.h
src/: auth.cpp  crypto_engine.cpp  ezone_c.cpp  postgres_adapter.cpp  storage_adapter.cpp
src/email/: log_provider.cpp  resend_provider.cpp
tests/: test_auth.cpp  test_crypto_engine.cpp
