[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "ezone-sdk"
version     = "0.1.0"
description = "Passwordless authentication SDK — Python client"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.9"
keywords    = ["passwordless", "authentication", "webauthn", "passkeys", "ezone"]

[project.optional-dependencies]
async = ["httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ezone*"]
