[package]
name        = "ezone"
version     = "0.1.0"
edition     = "2021"
description = "ezone passwordless authentication SDK — Rust client"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ezone-sdk/ezone-sdk"
keywords    = ["authentication", "passwordless", "ecdsa", "security"]

[dependencies]
reqwest  = { version = "0.12", features = ["json"] }
serde    = { version = "1",    features = ["derive"] }
serde_json = "1"
tokio    = { version = "1",    features = ["full"] }
thiserror = "1"

[dev-dependencies]
tokio  = { version = "1", features = ["full", "test-util"] }
mockito = "1"
